--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,37 @@
-.marcador{
-    background: #fe9d9d;
-    border: 1px solid #fe9d9d;
+/* ============================== layout ============================== */
+
+/* -------- Barra de Navegação -------- */
+.img-logo{
+    height: 40px;
+    width: 132px;
+    display: block;
+    background: url("imagens/spotify.svg") no-repeat;
+    background-size: contain;
+    color: transparent;
 }
+
+nav.navbar-transparente{
+    padding: 15px 0px;
+    background: rgba(87, 55, 7, 0.863);
+    border: none;
+}
+
+.navbar-brand{
+    padding: 5px 15px;
+}
+
+.divisor{
+    width: 1px;
+    height: 16px;
+    background: white;
+    margin: 16px 10px;
+}
+
+.navbar-inverse .navbar-nav>li>a {
+    color: white;
+}
+
+.navbar-inverse .navbar-nav>li>a:hover {
+    color: #9bf0e1;
+}
+/* ============================ Tipografia ============================ */
