--- a/estilo.css
+++ b/estilo.css
@@ -12,11 +12,18 @@ body {
 /* -------- Barra de Navegação -------- */
 .img-logo{
     height: 40px;
+    width: 40px;
+    float: left;
+}
+
+.logo {
+    margin: 2px 0px 0px 46px;
+    height: 40px;
     width: 132px;
     display: block;
-    background: url("img/coffee-547490_1280.png") no-repeat;
     background-size: contain;
-    color: transparent;
+    font-size: 20px;
+    color: white;
 }
 
 nav.navbar-transparente{
@@ -46,6 +53,7 @@ nav.navbar-transparente{
 
 /* -------- Imagem de Capa -------- */
 .capa {
+    margin-top: 20px;
     display: table;
     width: 100%;
 }
