--- a/estilo.css
+++ b/estilo.css
@@ -187,7 +187,7 @@ h3 {
     padding: 4px;
 }
 
-#servicos h2, #servicos h3, #cafes h3 {
+#servicos h2, #servicos h3, #cafes h3, #historia h3 {
     color: #fdc55d;
 }
 
