--- a/estilo.css
+++ b/estilo.css
@@ -77,7 +77,7 @@ nav.navbar-transparente{
     -webkit-border-radius: 500px;
     -moz-border-radius: 500px;
     padding: 10px 105px;
-    margin: 4px 15px;
+    margin: 0px 15px 14px 15px;
     text-transform: uppercase;
     transition: background 0.4s, color 0.4s;
     font-weight: 500;
