--- a/estilo.css
+++ b/estilo.css
@@ -129,7 +129,7 @@ nav.navbar-transparente{
     padding: 14px 0px;
 }
 
-/* -------- História -------- */
+/* -------- Sobre -------- */
 #historia {
     background: white;
     padding: 20px 0px;
@@ -138,6 +138,19 @@ nav.navbar-transparente{
     align-items: center;
     justify-content: center;
     display: flex;
+}
+
+.caixa-texto {
+    border: 1px solid #9d9d9d;
+    border-radius: 20px;
+    margin: 20px;
+    padding: 20px;
+    text-align: center;
+    background: rgb(97, 72, 34);
+}
+
+.hist {
+    margin-top: 20px;
 }
 
 /* -------- Contato -------- */
@@ -153,8 +166,9 @@ nav.navbar-transparente{
 /* -------- Rodapé -------- */
 footer {
     background: rgba(87, 55, 7, 1);
-    padding: 50px 0px 20px 0px;
+    padding: 30px 0px 5px 0px;
     position: relative;
+    width: 100%;
 }
 
 .rede-social {
@@ -162,7 +176,7 @@ footer {
 }
 
 .espacamento {
-    padding: 20px;
+    margin: 5px;
 }
 
 /* ============================ Tipografia ============================ */
@@ -194,7 +208,7 @@ h3 {
     padding: 4px;
 }
 
-#servicos h2, #servicos h3, #cafes h3, #historia h3 {
+#servicos h2, #servicos h3, #cafes h3, #historia h2 {
     color: #fdc55d;
 }
 
@@ -207,6 +221,11 @@ h3 {
     font-size: 30px;
     font-weight: 700;
     color: #fdc55d;
+}
+
+.caixa-texto p {
+    font-size: 20px;
+    color: white;
 }
 
 .borda {
